Wrote skeleton code
Added skeleton code before beginning rest of lab

--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>I'm the header of the page</title>
+<head>
+<body>
+	<head>
+	<h1>Body header</h1>
+	<img src="examplephoto.png" alt="I'm a photo."></img>
+	</head>
+	<a href="beesbeesbees.com" title="Click me. Now.">Bees</a>
+	<h3>Yet another header...</h3>
+	<p>&#xa9;</p>
+	<em>this... is... EMPHASIZED!!!</em>
+</body>
 </html>
