--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>I'm the header of the page</title>
+	<title>ITMD-361 Internet Technologies and Web Design</title>
 <head>
 <body>
 	<head>
-	<h1>Body header</h1>
+	<h1>ITMD-361 Internet Technologies and Web Design</h1>
 	<img src="examplephoto.png" alt="I'm a photo."></img>
 	</head>
 	<a href="beesbeesbees.com" title="Click me. Now.">Bees</a>
