Add text & headers
Remove some unnecessary skeleton components, begin adding lab2 text

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 <body>
 	<head>
 	<h1>ITMD-361 Internet Technologies and Web Design</h1>
-	<img src="examplephoto.png" alt="I'm a photo."></img>
 	</head>
-	<a href="beesbeesbees.com" title="Click me. Now.">Bees</a>
-	<h3>Yet another header...</h3>
-	<p>&#xa9;</p>
-	<em>this... is... EMPHASIZED!!!</em>
+	<h3>Spring 2013</h3>
+	<p>Ethan McGarry ~ emcgarry@hawk.iit.edu</p>
+	<h2>Professor:</h2>
+	<p>Daniel Krieglstein</p>
+	<h2>Lecture Days, Time and Place:</h2>
+	<p>Wednesday 6:25pm to 9:05pm, Stuart Building, Room 220</p>
+	<h2>Course Catalog Description:</h2>
+	<p>The course emphasizes standards and research. You will learn to make websites that last and are accessibe to everyone. The course avoids quick-fix shortcuts that too often plague web development practice and online instruction. Student work is organized around several major projects. All projects emphasize the course’s hands-on, theory-grounded approach to web development.</p>
 </body>
 </html>
