--- a/index.html
+++ b/index.html
@@ -16,5 +16,17 @@
 	<p>Wednesday 6:25pm to 9:05pm, Stuart Building, Room 220</p>
 	<h2>Course Catalog Description:</h2>
 	<p>The course emphasizes standards and research. You will learn to make websites that last and are accessibe to everyone. The course avoids quick-fix shortcuts that too often plague web development practice and online instruction. Student work is organized around several major projects. All projects emphasize the course’s hands-on, theory-grounded approach to web development.</p>
+	<h2>Course Outcomes:</h2>
+	<p>Students completing this course will be able to:<p>
+	<ul>
+		<li>Recognize HTML, CSS, and JavaScript markup and code.</li>
+		<li>Select the proper mark-up tags or code to achieve a particular result.</li>
+		<li>Identify improperly used markup and code.</li>
+		<li>Produce modern standards compliant web pages.</li>
+		<li>Deploy web pages to a GitHub server.</li>
+		<li>Write valid, well-formed semantic HTML; error-free, backward- and forward-compatible CSS; and error-free, progressively enhanced JavaScript over HTML pages that continue to function in the absence of JavaScript.</li>
+		<li>Effectively comment on and format source code for maximum readability.</li>
+		<li>Track the development of a project over time and collaborate with others using version control.</li>
+	</ul>
 </body>
 </html>
