--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<h1>ITMD-361 Internet Technologies and Web Design</h1>
 	</head>
 	<hr>
-	<br>
 	<h3>Spring 2013</h3>
 	<p>Ethan McGarry ~ emcgarry@hawk.iit.edu</p>
 	<h2>Professor:</h2>
@@ -19,7 +18,7 @@
 	<h2>Course Catalog Description:</h2>
 	<p>The course emphasizes standards and research. You will learn to make websites that last and are accessibe to everyone. The course avoids quick-fix shortcuts that too often plague web development practice and online instruction. Student work is organized around several major projects. All projects emphasize the course’s hands-on, theory-grounded approach to web development.</p>
 	<h2>Course Outcomes:</h2>
-	<p>Students completing this course will be able to:<p>
+	<p>Students completing this course will be able to:</p>
 	<ul>
 		<li>Recognize HTML, CSS, and JavaScript markup and code.</li>
 		<li>Select the proper mark-up tags or code to achieve a particular result.</li>
@@ -42,6 +41,6 @@
 		<li>Write useful, descriptive messages attached to granular commits in a version control.</li>
 	</ul>
 	<hr>
-	<br>.
+	<br>
 </body>
 </html>
